--- a/plantilla-html2.html
+++ b/plantilla-html2.html
@@ -46,7 +46,7 @@
                     <h2 style="color:#3F429A; margin: 0 0 7px">Hola Daniel Maidana!</h2>
                     <p style="margin: 2px; font-size: 15px">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget velit malesuada, faucibus nibh quis, tempus mauris. Vestibulum eu velit risus. Fusce porta eros nec ex condimentum venenatis. Pellentesque habitant morbi tristique senectus et netus
-                        et malesuada fames ac turpis egestas. Suspendisse at neque commodo, accumsan magna vel, vestibulum quam. Aliquam sed rutrum neque, et tempor lacus. Curabitur non volutpat purus.
+                        et malesuada fames ac turpis egestas. Suspendisse at neque commodo, accumsan magna vel, vestibulum quam. Aliquam sed rutrum neque, et tempor lacus. Curabitur non volutpat purus. </p>
                         <ul style="font-size: 15px;  margin: 10px 0">
                             <li>Ut tincidunt lorem in diam mattis, et vulputate eros fermentum.</li>
                             <li>Donec in urna non massa sodales porta.</li>
