--- a/select_soporte.html
+++ b/select_soporte.html
@@ -10,18 +10,14 @@
 	<select name="" id="select_soporte_2" class="custom-select form-control">
 		<option value="Le doy clic a guardar y no hace nada">Le doy clic a guardar y no hace nada</option>
 		<option value="Dice que falta cargar campos obligatorios y está todo cargado">Dice que falta cargar campos obligatorios y está todo cargado</option>
-		<option value="No puedo acceder a las siguientes fases de carga">No puedo acceder a las siguientes fases de carga de datos</option>
+		<option value="No puedo acceder a las siguientes fases de carga de datos">No puedo acceder a las siguientes fases de carga de datos</option>
 	</select>
-</div>
-
-<div class="form-group" id="soporte_3" style="display: none">
-	<textarea name="" id="select_soporte_3" class="form-control" rows="3" placeholder="Explicar el problema (Sé especifico)"></textarea>
 </div>
 
 <div class="form-group" id="soporte_4" style="display: none">
 	<select name="" id="select_soporte_4" class="custom-select form-control">
 		<option value="Le doy clic a guardar y no hace nada">Le doy clic a guardar y no hace nada</option>
-		<option value="Dice que falta cargar campos obligatorios y está todo cargado">La cambio pero solo aparece al cerrar sesion y volverla a iniciar</option>
+		<option value="La cambio pero solo aparece al cerrar sesión y volverla a iniciar">La cambio pero solo aparece al cerrar sesión y volverla a iniciar</option>
 		<option value="Se cambia pero al cerrar sesión y al volver entrar se deshizo el cambio.">Se cambia pero al cerrar sesión y al volver entrar se deshizo el cambio.</option>
 	</select>
 </div>
