Modificando href de imagenes en las plantillas

--- a/invitacion-empresas.html
+++ b/invitacion-empresas.html
@@ -10,11 +10,11 @@
 
 <body>
 
-    <table style="max-width: 600px; padding: 10px; margin:0 auto; border-collapse: collapse; border: 1px solid #bdc0c1; background-image: url('img/email/bg-business-min.jpg'); background-size: cover; background-position: right;">
+    <table style="max-width: 600px; padding: 10px; margin:0 auto; border-collapse: collapse; border: 1px solid #bdc0c1; background-image: url('https://jobbersargentina.net/img/email/bg-business-min.jpg'); background-size: cover; background-position: right;">
         <tr>
             <td style="background-color:rgba(255, 255, 255, 0.5); text-align: center; padding: 0 ">
-                <a href="# " style="text-decoration: none; ">
-                    <img width="40% " style="display:inline; margin: 20px 3% 0px 3% " src="img/logo.png">
+                <a href="https://jobbersargentina.net/" style="text-decoration: none; ">
+                    <img width="40% " style="display:inline; margin: 20px 3% 0px 3% " src="https://jobbersargentina.net/img/logo.png">
                 </a>
             </td>
         </tr>
@@ -22,7 +22,6 @@
         <tr>
             <td style="padding: 0; background-color: #3F429A; text-align: center; font-family: sans-serif ">
                 <h2 style="color: #fff ">¿Estas en busca de nuevos empleados para tu empresa?</h2>
-                <!-- <img style="padding: 0; display: block " src="https://s19.postimg.org/y5abc5ryr/alola_region.jpg " width="100% "> -->
             </td>
         </tr>
 
@@ -30,19 +29,20 @@
             <td style="background-color:rgba(255, 255, 255, 0.5);">
                 <div style="color: #000; margin: 4% 10% 2%; text-align: justify;font-family: sans-serif; ">
                     <div class="content" style="width: 100%; height: 100%; position: relative; text-align: center">
-                        <img src="img/email/gerentes1.png" alt="Gerentes">
+                        <img src="https://jobbersargentina.net/img/email/gerentes1.png" alt="Gerentes">
                         <h2 style="color:rgb(24, 28, 141); margin: 0 0 7px; text-align: center; font-size: 26px">Hola Empresario!</h2>
                         <p style="margin: 2px; font-size: 16px; display: inline-block; font-weight: 600">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget velit malesuada, faucibus nibh quis, tempus mauris. Vestibulum eu velit risus. Fusce porta eros nec ex condimentum venenatis. Pellentesque habitant morbi tristique senectus et netus
+                            Nos encantaría que pueda conocer nuestro portal de empleos 100% Cordobés! 
+                            En esta instancia de adhesión de empresas, consultoras y/o empleadores podrán publicar sus ofertas de forma gratuita, y encontrará los perfiles que necesita.
                             </br>
                             </br>
                             <p style="margin: 2px; font-size: 16px; display: inline-block; font-weight: 600">
-                                et malesuada fames ac turpis egestas. Suspendisse at neque commodo, accumsan magna vel, vestibulum quam. Aliquam sed rutrum neque, et tempor lacus. Curabitur non volutpat purus. </p>
-                            <!-- <img src="img/email/worker.png" alt="Worker" style="width: 30%; display: inline-block; top: 0px; right: -10px; position: absolute;"> -->
+                                Sabemos que hay perfiles específicos difíciles de hallar, y como en reclutamiento el  tiempo vale oro , trabajaremos mucho para ayudarlos a encontrarlos. </p>
+                                <br>
+                                <h2>TE ESPERAMOS!</h2>
                     </div>
                     <div style="width: 100%; text-align: center; height: 140px;">
-                        <!-- <a style="position: relative; text-decoration: none; border-radius: 5px; padding: 11px 23px; color: white; background-color: rgb(24, 28, 141); font-size: 18px; " href="#">REGISTRARSE YA! &nbsp&nbsp&nbsp<img src="img/email/hand.ico" alt="Hand" style="width: 14%; position: absolute; bottom: 5px; right: 5px"></a> -->
-                        <a href="#"><img style="width: 295px; height: 180px" src="img/email/boton-register.png" alt="Boton de registro"></a>
+                        <a href="https://jobbersargentina.net/empresa/registro.php"><img style="width: 295px; height: 180px" src="https://jobbersargentina.net/img/email/boton-register.png" alt="Boton de registro"></a>
                     </div>
                 </div>
             </td>
@@ -51,17 +51,14 @@
             <td style="background-color:rgba(255, 255, 255, 0.9); padding-bottom: 20px; ">
                 <p style="color:#3F429A; font-size: 14px; text-align: center;margin: 20px 0 0; font-family: sans-serif ; font-weight: bolder;">Visitanos en</p>
                 <div style="display:block;margin:20px 0; text-align: center; ">
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/fb.png " alt="FB " style="width: 20px; height: 20px; ">
+                    <a href="https://www.facebook.com/jobbersargentina" style="text-decoration: none; margin-right: 10px; ">
+                        <img src="https://jobbersargentina.net/img/email/fb.png " alt="FB " style="width: 20px; height: 20px; ">
                     </a>
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/brand2.png " alt="IG " style="width: 20px; height: 20px; ">
+                    <a href="https://www.instagram.com/jobbersargentina/" style="text-decoration: none; margin-right: 10px; ">
+                        <img src="https://jobbersargentina.net/img/email/brand2.png " alt="IG " style="width: 20px; height: 20px; ">
                     </a>
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/brand3.png " alt="TW " style="width: 20px; height: 20px; ">
-                    </a>
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/sphere.png " alt="WEB " style="width: 20px; height: 20px; ">
+                    <a href="https://jobbersargentina.net/" style="text-decoration: none; margin-right: 10px; ">
+                        <img src="https://jobbersargentina.net/img/email/sphere.png " alt="WEB " style="width: 20px; height: 20px; ">
                     </a>
                 </div>
                 <p style="color:#3F429A; font-size: 12px; text-align: center;margin: 30px 0 0; font-weight: bolder; font-family: sans-serif ">© 2017 - 2018 | Jobbers - Todos los derechos reservados</p>
