--- a/plantilla-invitacion.html
+++ b/plantilla-invitacion.html
@@ -1,69 +1,70 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Invitacion</title>
-</head>
-
-<body>
-
-    <table style="max-width: 600px; padding: 10px; margin:0 auto; border-collapse: collapse; border: 1px solid #bdc0c1; background-image: url('img/email/bg-pencils-2.jpg'); background-size: cover;">
-        <tr>
-            <td style="background-color:rgba(255, 255, 255, 0.5); text-align: center; padding: 0 ">
-                <a href="# " style="text-decoration: none; ">
-                    <img width="40% " style="display:inline; margin: 20px 3% 0px 3% " src="img/logo.png">
-                </a>
-            </td>
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
+    <title>
+      Invitacion
+    </title>
+  </head>
+  <body>
+    <table style="max-width:600px;padding:10px;margin:0 auto;border-collapse:collapse;border:1px solid #bdc0c1;background-image:url('https://jobbersargentina.net/img/email/bg-pencils-2.jpg');background-size:cover;">
+      <tr>
+        <td style="background-color:rgba(255, 255, 255, 0.5);text-align:center;padding:0;">
+          <a href="https://jobbersargentina.net/" style="text-decoration:none;">
+            <img src="https://jobbersargentina.net/img/logo.png" style="display:inline; margin: 20px 3% 0px 3%" width="40%" alt="logo.png"></a>
+          </td>
         </tr>
-
         <tr>
-            <td style="padding: 0; background-color: #3F429A; text-align: center; font-family: sans-serif ">
-                <h2 style="color: #7ebfea ">¿Quieres conseguir el trabajo ideal para ti?</h2>
-                <!-- <img style="padding: 0; display: block " src="https://s19.postimg.org/y5abc5ryr/alola_region.jpg " width="100% "> -->
-            </td>
+          <td style="padding:0;background-color:#3F429A;text-align:center;font-family:sans-serif;">
+            <h2 style="color:#7ebfea;">
+              ¿Quieres conseguir el trabajo ideal para ti?
+            </h2>
+          </td>
         </tr>
-
         <tr>
-            <td style="padding-bottom: 20px; ">
-                <div style="color: #34495e; margin: 4% 10% 2%; text-align: justify;font-family: sans-serif ">
-                    <div class="content" style="width: 100%; height: 100%; position: relative">
-                        <h2 style="color:#3F429A; margin: 0 0 7px ">Hola Futuro Jobber!</h2>
-                        <p style="margin: 2px; font-size: 15px; width: 70%; display: inline-block">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget velit malesuada, faucibus nibh quis, tempus mauris. Vestibulum eu velit risus. Fusce porta eros nec ex condimentum venenatis. Pellentesque habitant morbi tristique senectus et netus
-                            <p style="margin: 2px; font-size: 15px; width: 70%; display: inline-block">
-                                et malesuada fames ac turpis egestas. Suspendisse at neque commodo, accumsan magna vel, vestibulum quam. Aliquam sed rutrum neque, et tempor lacus. Curabitur non volutpat purus. </p>
-                            <img src="img/email/worker.png" alt="Worker" style="width: 30%; display: inline-block; top: 0px; right: -10px; position: absolute;">
-                    </div>
-                    <div style="width: 100%; text-align: center; margin-top: 40px; ">
-                        <a style="position: relative; text-decoration: none; border-radius: 5px; padding: 11px 23px; color: white; background-color: #3498db; font-size: 18px; " href="#">REGISTRARSE YA! &nbsp&nbsp&nbsp<img src="img/email/hand.ico" alt="Hand" style="width: 14%; position: absolute; bottom: 5px; right: 5px"></a>
-                    </div>
+          <td style="padding-bottom:20px;">
+            <div style="color:#34495e;margin:4% 10% 2%;text-align:justify;font-family:sans-serif;">
+              <div class="content" style="width:100%;height:100%;position:relative;text-align:center;">
+                <img alt="Worker" src="https://jobbersargentina.net/img/email/worker.png" style="width: 30%;">
+                <h2 style="color:#3F429A;margin:0 0 7px;">
+                  Hola Futuro Jobber!
+                </h2>
+                <p>
+                Hola Jobbers, te invitamos a que formes parte de la red de trabajo más prometedora de argentina. Con nuevas funciones, curriculum descargable en formato PDF para que lo compartas en tus entrevistas de trabajo,  Además nuevas ofertas para que encuentres el trabajo que necesitas.
+              </p>
+              <p>
+              Te esperamos!
+            </p>
+            
+          </div>
+          <div style="width:100%;text-align:center;margin-top:40px;">
+            <a href="https://jobbersargentina.net/registro.php" style="position:relative;text-decoration:none;border-radius:5px;padding:11px 23px;color:#FFFFFF;background-color:#3498db;font-size:18px;">
+              REGISTRARSE YA!
+            </a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr style="border-top:1px solid #bdc0c1;">
+      <td style="background-color:rgba(255, 255, 255, 0.5);padding-bottom:20px;">
+        <p style="color:#3F429A;font-size:14px;text-align:center;margin:20px 0 0;font-family:sans-serif;font-weight:bolder;">
+          Visitanos en
+        </p>
+        <div style="display:block;margin:20px 0;text-align:center;">
+          <a href="https://www.facebook.com/jobbersargentina" style="text-decoration:none;margin-right:10px;">
+            <img alt="FB" src="https://jobbersargentina.net/img/email/fb.png" style="width: 20px; height: 20px;"></a>
+            <a href="https://www.instagram.com/jobbersargentina/" style="text-decoration:none;margin-right:10px;">
+              <img alt="IG" src="https://jobbersargentina.net/img/email/brand2.png" style="width: 20px; height: 20px;"></a>
+                <a href="https://jobbersargentina.net/" style="text-decoration:none;margin-right:10px;">
+                  <img alt="WEB" src="https://jobbersargentina.net/img/email/sphere.png" style="width: 20px; height: 20px;"></a>
                 </div>
-            </td>
-        </tr>
-        <tr style="border-top: 1px solid #bdc0c1 ">
-            <td style="background-color:rgba(255, 255, 255, 0.5); padding-bottom: 20px; ">
-                <p style="color:#3F429A; font-size: 14px; text-align: center;margin: 20px 0 0; font-family: sans-serif ; font-weight: bolder;">Visitanos en</p>
-                <div style="display:block;margin:20px 0; text-align: center; ">
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/fb.png " alt="FB " style="width: 20px; height: 20px; ">
-                    </a>
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/brand2.png " alt="IG " style="width: 20px; height: 20px; ">
-                    </a>
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/brand3.png " alt="TW " style="width: 20px; height: 20px; ">
-                    </a>
-                    <a href="# " style="text-decoration: none; margin-right: 10px; ">
-                        <img src="img/email/sphere.png " alt="WEB " style="width: 20px; height: 20px; ">
-                    </a>
-                </div>
-                <p style="color:#3F429A; font-size: 12px; text-align: center;margin: 30px 0 0; font-weight: bolder; font-family: sans-serif ">© 2017 - 2018 | Jobbers - Todos los derechos reservados</p>
-            </td>
-        </tr>
-    </table>
-</body>
-
+                <p style="color:#3F429A;font-size:12px;text-align:center;margin:30px 0 0;font-weight:bolder;font-family:sans-serif;">
+                  © 2017 - 2018 | Jobbers - Todos los derechos reservados
+                </p>
+              </td>
+            </tr>
+          </table>
+        </body>
 </html>
